--- a/apprendre_p13/requirements.txt
+++ b/apprendre_p13/requirements.txt
@@ -3,12 +3,15 @@ asgiref==3.2.3
 attrs==19.3.0
 black==19.10b0
 Click==7.0
+distlib==0.3.0
 dj-database-url==0.5.0
 Django==3.0.4
 django-crispy==1.8.1
 django-crispy-forms==1.9.0
 django-enumfield==2.0.1
+filelock==3.0.12
 gunicorn==20.0.4
+importlib-metadata==1.5.0
 pathspec==0.7.0
 psycopg2==2.8.4
 pytz==2019.3
@@ -17,4 +20,6 @@ six==1.14.0
 sqlparse==0.3.1
 toml==0.10.0
 typed-ast==1.4.1
+virtualenv==20.0.9
 whitenoise==5.0.1
+zipp==3.1.0
