--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==3.0.4
 django-crispy==1.8.1
 django-crispy-forms==1.9.0
 django-enumfield==2.0.1
+django-heroku==0.3.1
 filelock==3.0.12
 gunicorn==20.0.4
 importlib-metadata==1.5.0
